--- a/src/app/all-due-todos/all-due-todos.component.html
+++ b/src/app/all-due-todos/all-due-todos.component.html
@@ -7,7 +7,7 @@
       <strong>Description:</strong> {{ todo.description }}<br>
       <strong>Due Date:</strong> {{ todo.due_date }}<br>
       <strong>Priority:</strong> {{ todo.priority }}<br>
-      <button>View</button>
+      <button routerLink="/duetododetail">View</button>
       <!-- Add any other properties you want to display -->
     </li>
   </ul>
